# DocMeNN

./: .env.example  .gitignore  README.md  package-lock.json  package.json  requirements.txt
pharmacy_backend/: manage.py  pyproject.toml  requirements.txt  schema.yml
pharmacy_backend/accounting/: admin.py  constants.py  opening_balance.py
pharmacy_backend/accounting/api/: opening_balances.py  urls.py  view.py
pharmacy_backend/accounting/migrations/: 0001_initial.py  0002_alter_chartofaccounts_created_at_and_more.py  0003_alter_journalentry_options_and_more.py  0004_expense.py  0005_periodclose.py  0006_periodclose_accounting__chart_i_11d911_idx_and_more.py  0007_alter_journalentry_options_and_more.py  0008_chartofaccounts_business_type_chartofaccounts_code_and_more.py  0009_alter_chartofaccounts_business_type_and_more.py  (+4 more)
pharmacy_backend/backend/: asgi.py  create_admin.py  urls.py  wsgi.py
pharmacy_backend/batches/: admin.py  permissions.py  urls.py
pharmacy_backend/permissions/: roles.py
pharmacy_backend/pos/: admin.py  tests.py  urls.py  views.py
pharmacy_backend/products/: admin.py  urls.py
pharmacy_backend/public/: __init__.py  apps.py  model.py  serializers.py  urls.py
pharmacy_backend/purchases/: models.py
pharmacy_backend/sales/: admin.py  public_urls.py  urls.py
pharmacy_backend/scripts/: backup_db_to_r2.sh
pharmacy_backend/store/: admin.py  apps.py  models.py  serializers.py  urls.py  view.py
pharmacy_backend/users/: admin.py  auth_backends.py  backends.py  jwt.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+326 files in other folders)
