[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["*/migrations/*", ".venv", "venv", "env", "node_modules", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "pos", "products", "sales", "purchases", "users", "store", "public", "accounting"]
combine-as-imports = true

[tool.poetry]
name = "pharmacy-backend"
version = "0.1.0"
description = "Multi-business retail ERP backend"
authors = ["DocMe <me@tisdocme.com>"]
package-mode = false